app name changed to petdiary

--- a/petdiary/web/manifest.json
+++ b/petdiary/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "petapp",
-    "short_name": "petapp",
+    "name": "petdiary",
+    "short_name": "petdiary",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
