--- a/petdiary/.vscode/launch.json
+++ b/petdiary/.vscode/launch.json
@@ -5,18 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "petapp",
+            "name": "petdiary",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "petapp (profile mode)",
+            "name": "petdiary (profile mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "petapp (release mode)",
+            "name": "petdiary (release mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
