--- a/petdiary/windows/runner/Runner.rc
+++ b/petdiary/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "petapp" "\0"
+            VALUE "FileDescription", "petdiary" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "petapp" "\0"
+            VALUE "InternalName", "petdiary" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "petapp.exe" "\0"
-            VALUE "ProductName", "petapp" "\0"
+            VALUE "OriginalFilename", "petdiary.exe" "\0"
+            VALUE "ProductName", "petdiary" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
